Bug 211551 - Dell AE515 USB sound bar 413c:a506 quirk: "cannot get freq at ep"
Summary: Dell AE515 USB sound bar 413c:a506 quirk: "cannot get freq at ep"
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-03 17:14 UTC by James Ettle
Modified: 2021-03-04 08:32 UTC (History)
1 user (show)

See Also:
Kernel Version: 5.10
Subsystem:
Regression: No
Bisected commit-id:


Attachments
alsa-info data including sound bar (54.40 KB, text/plain)
2021-02-03 17:15 UTC, James Ettle
Details
Fix patch (1.09 KB, patch)
2021-03-03 14:44 UTC, Takashi Iwai
Details | Diff

Description James Ettle 2021-02-03 17:14:56 UTC
Upon plugging in a Dell AE515 sound bar (which has both speakers and I microphone) the following appears in dmesg:


[364822.020172] usb 1-4.3.1: new full-speed USB device number 17 using xhci_hcd
[364822.339223] usb 1-4.3.1: New USB device found, idVendor=413c, idProduct=a506, bcdDevice= 0.04
[364822.339229] usb 1-4.3.1: New USB device strings: Mfr=1, Product=2, SerialNumber=0
[364822.339233] usb 1-4.3.1: Product: DELL PROFESSIONAL SOUND BAR AE515
[364822.339235] usb 1-4.3.1: Manufacturer: Dell
[364822.556180] input: Dell DELL PROFESSIONAL SOUND BAR AE515 Consumer Control as /devices/pci0000:00/0000:00:14.0/usb1/1-4/1-4.3/1-4.3.1/1-4.3.1:1.3/0003:413C:A506.000C/input/input48
[364822.608418] input: Dell DELL PROFESSIONAL SOUND BAR AE515 as /devices/pci0000:00/0000:00:14.0/usb1/1-4/1-4.3/1-4.3.1/1-4.3.1:1.3/0003:413C:A506.000C/input/input49
[364822.608888] hid-generic 0003:413C:A506.000C: input,hiddev96,hidraw1: USB HID v1.11 Device [Dell DELL PROFESSIONAL SOUND BAR AE515] on usb-0000:00:14.0-4.3.1/input3
[364822.716803] usb 1-4.3.1: 1:1: cannot get freq at ep 0x81
[364822.732748] usb 1-4.3.1: 2:1: cannot get freq at ep 0x1
[364822.735035] usb 1-4.3.1: 1:1: cannot get freq at ep 0x81


So it looks like this chip needs a quirk (on a technicality -- it otherwise makes sound properly). I found the "cannot get freq" messages went away using quirk_alias="413ca506:291230c8".
Comment 1 James Ettle 2021-02-03 17:15:25 UTC
Created attachment 295057 [details]
alsa-info data including sound bar
Comment 2 Takashi Iwai 2021-03-03 14:41:18 UTC
Unless you see other problems than those error messages, we can shut up it by adding your device to the quirk list.
Comment 3 Takashi Iwai 2021-03-03 14:44:34 UTC
Created attachment 295603 [details]
Fix patch
Comment 4 James Ettle 2021-03-03 20:57:06 UTC
I've tried the patch and confirm that it silences the messages. The device's audio functions are working properly to the extent I have tested.
Comment 5 Takashi Iwai 2021-03-04 08:32:28 UTC
OK, I submitted and merged the fix now in sound.git tree.  It slipped from 5.12-rc2 merge, but will be included in 5.12-rc3 or rc4.  Let's close.

Note You need to log in before you can comment on or make changes to this bug.